--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 blessed==1.20.0
-botocore==1.29.136
+boto3==1.26.141
+botocore==1.29.141
 chalice==1.28.0
 click==8.1.3
 inquirer==2.10.1
@@ -8,6 +9,7 @@ python-dateutil==2.8.2
 python-editor==1.0.4
 PyYAML==6.0
 readchar==4.0.5
+s3transfer==0.6.1
 six==1.16.0
 typing_extensions==4.5.0
 urllib3==1.26.15
